remove plastimatch from apt-package installation

--- a/Dockerfiles/download_convert/Dockerfile
+++ b/Dockerfiles/download_convert/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update \
     dcm2niix=1.0.20181125-1\
     lz4=1.8.3-1+deb10u1\
     pigz=2.4-1\
-    plastimatch=1.7.4+dfsg.1-2\
+    #plastimatch=1.7.4+dfsg.1-2\
     wget=1.20.1-1.1\
     zip=3.0-11+b1\
   && rm -rf /var/lib/apt/lists/*
@@ -31,8 +31,8 @@ RUN pip3 install --no-cache-dir \
     papermill==2.4.0
 
 # Download and install s5cmd for interacting with cloud storage
-ENV S5CMD_URL="https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz"
-ENV S5CMD_FN="s5cmd_2.0.0_Linux-64bit.tar.gz"
+ENV S5CMD_URL="https://github.com/peak/s5cmd/releases/download/v2.2.2/s5cmd_2.2.2_Linux-64bit.tar.gz"
+ENV S5CMD_FN="s5cmd_2.2.2_Linux-64bit.tar.gz"
 RUN wget ${S5CMD_URL} \
   && tar -xvzf ${S5CMD_FN} \
   && rm ${S5CMD_FN} \
