--- a/.github/workflows/download_convert_inference_totalseg.yml
+++ b/.github/workflows/download_convert_inference_totalseg.yml
@@ -1,17 +1,11 @@
 name: download_convert_inference_totalseg
 
 on:
-  push:
-    branches:
-      - dev
-      - main
-    paths:
-      - 'Dockerfiles/download_convert_inference_totalseg/**'
-      - .github/workflows/download_convert_inference_totalseg.yml
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build-and-push-dev:
-    if: github.ref == 'refs/heads/dev'
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -38,68 +32,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image (dev)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfiles/download_convert_inference_totalseg/Dockerfile
-          push: true
-          tags: imagingdatacommons/download_convert_inference_totalseg:dev
-          build-args: |
-            GIT_HASH=${{ env.COMMIT_HASH }}
-        env:
-          COMMIT_HASH: ${{ env.COMMIT_HASH }}
-
-      - name: Login to GitHub Container Registry (ghcr.io)
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push Docker image to GitHub Container Registry
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfiles/download_convert_inference_totalseg/Dockerfile
-          push: true
-          tags: ghcr.io/imagingdatacommons/download_convert_inference_totalseg:dev
-          build-args: |
-            GIT_HASH=${{ env.COMMIT_HASH }}
-        env:
-          COMMIT_HASH: ${{ env.COMMIT_HASH }}
-
-
-
-  build-and-push-prod:
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Git
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-
-      - name: Get Git Commit Hash
-        id: git-commit-hash
-        run: |
-          COMMIT_HASH=$(git rev-parse HEAD)
-          echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
-
-      - name: Copy additional files to build context
-        run: |
-          cp Dockerfiles/download_convert_inference_totalseg/weights_download.sh .
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image (main)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
