--- a/.github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml
+++ b/.github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml
@@ -1,11 +1,14 @@
 name: download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
 
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
     
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -26,24 +29,41 @@ jobs:
         run: |
           cp Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/weights_download.sh .
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image (main)
+      - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
-          push: true
           tags: imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
           COMMIT_HASH: ${{ env.COMMIT_HASH }}
 
+  push-dockerhub:
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image to Docker Hub
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
+          push: true
+          tags: imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
+
+  push-ghcr:
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
       - name: Login to GitHub Container Registry (ghcr.io)
         uses: docker/login-action@v1
         with:
@@ -51,14 +71,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image to GitHub Container Registry
+      - name: Push Docker image to GitHub Container Registry
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
           push: true
           tags: ghcr.io/imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
-          build-args: |
-            GIT_HASH=${{ env.COMMIT_HASH }}
-        env:
-          COMMIT_HASH: ${{ env.COMMIT_HASH }}
