--- a/.github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml
+++ b/.github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-    
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -40,41 +39,32 @@ jobs:
         env:
           COMMIT_HASH: ${{ env.COMMIT_HASH }}
 
-  push-dockerhub:
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
       - name: Login to Docker Hub
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image to Docker Hub
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
-          push: true
-          tags: imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
-
-  push-ghcr:
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
       - name: Login to GitHub Container Registry (ghcr.io)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Push Docker image to GitHub Container Registry
+      - name: Push Docker image to Docker Hub
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
           push: true
-          tags: ghcr.io/imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
+          tags: |
+            imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
+            ghcr.io/imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
+          build-args: |
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
