--- a/Dockerfiles/download_convert_inference_totalseg/Dockerfile
+++ b/Dockerfiles/download_convert_inference_totalseg/Dockerfile
@@ -16,17 +16,17 @@ RUN rm -f /etc/apt/sources.list.d/*.list
 
 # Install apt packages
 RUN apt-get update && apt-get install -y --no-install-recommends\
-    build-essential=12.8ubuntu1.1\
-    ffmpeg=7:4.2.7-0ubuntu0.1\
-    lz4=1.9.2-2ubuntu0.20.04.1\
-    pigz=2.4-1\
+    build-essential\
+    ffmpeg\
+    lz4\
+    pigz\
     #plastimatch=1.8.0+dfsg.1-2build1\
-    python3-dev=3.8.2-0ubuntu2\
-    python3-pip=20.0.2-5ubuntu1.9\
-    unzip=6.0-25ubuntu1.1\
-    wget=1.20.3-1ubuntu2\
-    xvfb=2:1.20.13-1ubuntu1~20.04.8\
-    zip=3.0-11build1\
+    python3-dev\
+    python3-pip\
+    unzip\
+    wget\
+    xvfb\
+    zip\
     && rm -rf /var/lib/apt/lists/*
 
 # Install pip packages
