--- a/.github/workflows/dicom_seg_pyradiomics_sr.yml
+++ b/.github/workflows/dicom_seg_pyradiomics_sr.yml
@@ -44,15 +44,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Login to GitHub Container Registry (ghcr.io)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'      
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push Docker image to Docker Hub and ghcr.io
+      - name: Push Docker image to Docker Hub 
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'           
         uses: docker/build-push-action@v5
         with:
@@ -61,7 +53,6 @@ jobs:
           push: true
           tags: |
             imagingdatacommons/dicom_seg_pyradiomics_sr
-            ghcr.io/imagingdatacommons/dicom_seg_pyradiomics_sr
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
