--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 # .gitignore in the dev branch
 
+# mac specific - subset of https://github.com/github/gitignore/blob/main/Global/macOS.gitignore
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
 # Ignore all YAML files in the .github/workflows directory
 .github/workflows/**.yml
