--- a/workflows/TotalSegmentator/Dockerfiles/download_convert/Dockerfile
+++ b/workflows/TotalSegmentator/Dockerfiles/download_convert/Dockerfile
@@ -5,7 +5,7 @@ ARG GIT_HASH
 LABEL PYTHON_BASE_DOCKER_IMAGE="python:3.11.2-slim-buster"\
       MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
       GIT_HASH=${GIT_HASH}\
-      PATH_TO_DOCKER_FILE="https://github.com/imagingdatacommons/Cloud-Resources-Workflows/blob/${GIT_HASH}/Dockerfiles/download_convert/Dockerfile"\
+      PATH_TO_DOCKER_FILE="https://github.com/imagingdatacommons/CloudSegmentator/blob/${GIT_HASH}/workflows/TotalSegmentator/Dockerfiles/download_convert/Dockerfile"\
       IMAGE_NAME_ON_DOCKERHUB="imagingdatacommons/download_convert"
       
 # Install some basic system utilities
@@ -14,7 +14,6 @@ RUN apt-get update \
     dcm2niix\
     lz4\
     pigz\
-    #plastimatch=1.7.4+dfsg.1-2\
     wget\
     zip\
   && rm -rf /var/lib/apt/lists/*
@@ -22,6 +21,7 @@ RUN apt-get update \
 
 # Install Jupyter utilities
 RUN pip3 install --no-cache-dir \
+    idc-index==0.2.8\
     matplotlib==3.7.1\
     ipykernel==6.22.0\
     ipython==8.11.0\
@@ -33,7 +33,7 @@ RUN pip3 install --no-cache-dir \
 # Download and install s5cmd for interacting with cloud storage
 ENV S5CMD_URL="https://github.com/peak/s5cmd/releases/download/v2.2.2/s5cmd_2.2.2_Linux-64bit.tar.gz"
 ENV S5CMD_FN="s5cmd_2.2.2_Linux-64bit.tar.gz"
-RUN wget ${S5CMD_URL} \
+RUN wget -q ${S5CMD_URL} 2>&1 \
   && tar -xvzf ${S5CMD_FN} \
   && rm ${S5CMD_FN} \
   && mv s5cmd /usr/local/bin/s5cmd
