--- a/.github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml
+++ b/.github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml
@@ -2,10 +2,22 @@ name: download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - "main" 
+    paths:
+      - ".github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml"
+      - "workflows/TotalSegmentator/Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile"
+      - "workflows/TotalSegmentator/Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/weights_download.sh"  
+    tags:
+      - 'v*'    
   pull_request:
-    branches: [ "main" ]
-  workflow_dispatch: 
+    branches:
+      - "main" 
+    paths:
+      - ".github/workflows/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr.yml"
+      - "workflows/TotalSegmentator/Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile"
+      - "workflows/TotalSegmentator/Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/weights_download.sh"      
+  workflow_dispatch:  
   
 jobs:
   build:
@@ -27,36 +39,32 @@ jobs:
 
       - name: Copy additional files to build context
         run: |
-          cp Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/weights_download.sh .
+          cp workflows/TotalSegmentator/Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/weights_download.sh .
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
         with:
-          context: .
-          file: ./Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
-          tags: imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
-          build-args: |
-            GIT_HASH=${{ env.COMMIT_HASH }}
-        env:
-          COMMIT_HASH: ${{ env.COMMIT_HASH }}
+          images: |
+           imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
 
       - name: Login to Docker Hub
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push Docker image to Docker Hub
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      - name: Build and Push Docker image to Docker Hub 
+        if:           
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
-          push: true
-          tags: |
-            imagingdatacommons/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr
+          file: ./workflows/TotalSegmentator/Dockerfiles/download_convert_inference_totalseg_dicom_seg_pyradiomics_sr/Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
           COMMIT_HASH: ${{ env.COMMIT_HASH }}
+  
